<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/fragmentHolder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.dasyel.dasyelwillems_pset6.MainActivity"/>

    <RelativeLayout
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_gravity="left|start"
        android:background="#ffeeeeee">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/add_list_ll">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/list_name_et"
                android:layout_weight="1"
                android:inputType="text"
                android:hint="@string/hint_drawer_add_list" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@android:drawable/ic_input_add"
                android:id="@+id/imageButton"
                android:layout_weight="1"
                android:onClick="addList"
                android:background="?android:selectableItemBackground" />

        </LinearLayout>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/navList"
            android:background="#ffeeeeee"
            android:layout_below="@+id/add_list_ll"
            android:layout_above="@+id/drawer_button_box" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/drawer_button_box"
            android:layout_alignParentBottom="true">

            <Button
                android:text="@string/button_friends"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/friends_button"
                android:onClick="goToFriends" />

            <Button
                android:text="@string/button_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/logout_button"
                android:onClick="logout" />
        </LinearLayout>
    </RelativeLayout>

</android.support.v4.widget.DrawerLayout>